Buổi 4: Refactor code

--- a/lesson2/package.json
+++ b/lesson2/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon --experimental-specifier-resolution=node server.js"
+    "start": "nodemon --experimental-specifier-resolution=node src/server.js"
   },
   "keywords": [],
   "author": "",
