--- a/lesson2/package.json
+++ b/lesson2/package.json
@@ -2,9 +2,10 @@
   "name": "lesson2",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon server.js"
+    "server": "nodemon --experimental-specifier-resolution=node src/server.js"
   },
   "keywords": [],
   "author": "",
